3.Semantic.Analysis/test/semanal/error/error4_2_4.mod
module ret;

function f(a : integer) : boolean;
begin
    a := ReadInt();
    return a
end f;

begin

end ret.
